neoforge support and minor cleanup